# Quber-CLI

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/scripts/: build_pyz.sh  run_tests.sh
.github/workflows/: build-cli-pyz.yml  build-image.yml  quber-build-image.yml  quber-release.yml  tests-only.yml
TESTS/: context.yaml  context2.yaml  params.yaml
docs/: development.md  minio.md
quber_cli/: __main__.py  piped_commands.py
quber_cli/github/: github_command.py
quber_cli/report/: report_command.py
quber_cli/umbrella_test/: umbrella_command.py
qubership_pipelines_common_library_cli_test/: __main__.py  test_command.py
scripts/: build_linux.sh  build_pyz.sh  build_win.sh  cleanup.sh  test.sh  validate.sh
scripts/python/: check_test_results.py
tests/: run_test_suite.py
tests/cli/: test_cli_commands.py
