[tool.poetry]
name = "quber_cli"
version = "0.0.1"
description = "Quber CLI"
authors = ["Igor Lebedev <lebedev.light@gmail.com>"]
readme = "README.md"
packages = [{include = "quber_cli"}]

[tool.poetry.dependencies]
python = "^3.11"
qubership-pipelines-common-library = "*"

[tool.poetry.group.test.dependencies]
pytest = "^6.0.0"

[tool.poetry.scripts]
quber_cli = "quber_cli.__main__:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"